<resources>
    <string name="appName">Food Organize</string>>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">¿Contraseña olvidada?</string>
    <string name="rememberMe">Recuerdame</string>
    <string name="signIn">Iniciar sesión</string>
    <string name="signUp">Registrarme</string>
    <string name="register">Registrarme</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="menus">Menus</string>
    <string name="otherOptions">Otras opciones</string>
    <string name="calendarMenus">Calendario</string>
    <string name="food">Comidas</string>
    <string name="closeSession">Cerrar sesión</string>
    <string name="settings">Ajustes</string>
    <string name="optionsInRow">⋮</string>
    <string name="icon">Icono</string>
    <string name="delete">Eliminar</string>
    <string name="modify">Modificar</string>
    <string name="add">Añadir</string>
    <string name="addMenu">Añadir menu</string>
    <string name="addFood">Añadir comida</string>
    <string name="addTimeMenu">Añadir franja horaria</string>
    <string name="nameFood">Nombre comida</string>
    <string name="description">Descripción</string>
    <string name="timeToPrepare">Tiempo de preparación</string>
    <string name="save">Guardar</string>
    <string name="title_activity_create_food">ActivityCreateFood</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="options">Opciones</string>
    <string name="nameTimeMenu">Nombre franja horaria</string>
    <string name="menuToSearch">Menu a buscar</string>
    <string name="nameMenu">Nombre del menu</string>
    <string name="foodToSearch">Comida a buscar</string>
    <string name="date">Fecha</string>
</resources>